--- a/QtQuickApplication/QtQuickApplication.vcxproj
+++ b/QtQuickApplication/QtQuickApplication.vcxproj
@@ -14,17 +14,17 @@
     <ProjectGuid>{F6F19361-303A-44BD-A74D-E6043F71A13C}</ProjectGuid>
     <Keyword>QtVS_v303</Keyword>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">10.0.17763.0</WindowsTargetPlatformVersion>
-    <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0</WindowsTargetPlatformVersion>
     <QtMsBuild Condition="'$(QtMsBuild)'=='' OR !Exists('$(QtMsBuild)\qt.targets')">$(MSBuildProjectDirectory)\QtMsBuild</QtMsBuild>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
@@ -45,8 +45,18 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <IncludePath>D:\glm-master\;$(IncludePath)</IncludePath>
+    <IncludePath>D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\QtCore;D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\QtOpenGL;D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\QtOpenGLExtensions;D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\QtGui;D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\QtWidgets;D:\QT\Qt5.12.9\5.12.9\msvc2017_64\include\;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>D:\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>D:\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>msvc2017_64</QtInstall>
     <QtModules>quick</QtModules>
@@ -54,7 +64,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>core;opengl;gui;quick;openglextensions</QtModules>
+    <QtModules>core;gui;opengl;openglextensions</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
@@ -87,9 +97,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GlTimer.cpp" />
+    <ClCompile Include="ImageFade.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
+    <ClCompile Include="WindField.cpp" />
     <ClCompile Include="QtMainWindow.cpp" />
     <ClCompile Include="QtOpengl.cpp" />
     <QtRcc Include="qml.qrc" />
@@ -105,12 +118,18 @@
     <QtMoc Include="QtMainWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GlTimer.h" />
     <ClInclude Include="GlUtil.h" />
+    <ClInclude Include="ImageFade.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleSystem.h" />
+    <ClInclude Include="WindField.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Fragment.glsl" />
+    <None Include="ImageFade.glsl" />
+    <None Include="ImageFragment.glsl" />
+    <None Include="ImageVertex.glsl" />
     <None Include="Particle.glsl" />
     <None Include="Vertex.glsl" />
   </ItemGroup>
